src_old/objects/Attribute__c.object
<CustomObject>
    <description>Attribute defines an attribute and includes a type definition (e.g. Picklist, Yes/No, Text, Multiple Choice, etc.), description, and other default values. Attributes are related to a Service Attribute and a Project Service Attribute.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A checkbox that indicates whether this Attribute is active (this field must not be selected if the attribute is to be deleted or turned off).</description>
        <inlineHelpText>Select this box if the attribute active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttributeMaxLength__c</fullName>
        <description>A value that indicates the maximum length of the Attribute.</description>
        <label>Attribute Max Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AttributeTitle__c</fullName>
        <description>An entry field for the title of the Attribute.</description>
        <inlineHelpText>Enter the title of the attribute.</inlineHelpText>
        <label>Attribute Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeType__c</fullName>
        <description>A picklist with that determines the type of Attribute.</description>
        <inlineHelpText>Choose the type of attribute.</inlineHelpText>
        <label>AttributeType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Yes/No</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Single-Select List</fullName>
                </value>
                <value>
                    <fullName>Multi-Select List</fullName>
                </value>
                <value>
                    <fullName>Photo</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>An entry field for the description of this Attribute.</description>
        <inlineHelpText>Enter a description of this attribute.</inlineHelpText>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepeatCount__c</fullName>
        <description>A field with a value that determines whether or not the Attribute is a repeatable. 0 indicates that it is a non-repeatable Attribute. A number higher than 0 determines the recurring number.</description>
        <inlineHelpText>Enter the number of times that this attribute can be repeated.</inlineHelpText>
        <label>Repeat Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repeatable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox that indicates whether or not this Attribute can be repeated.</description>
        <inlineHelpText>Select this box if the attribute can be repeated.</inlineHelpText>
        <label>Repeatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox that indicates whether or not this Attribute is required.</description>
        <inlineHelpText>Select this box if the attribute is required.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>AttributeMaxLength__c</columns>
        <columns>AttributeType__c</columns>
        <columns>Description__c</columns>
        <columns>RepeatCount__c</columns>
        <columns>Repeatable__c</columns>
        <columns>Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Attribute Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>